<resources>
    <string name="app_name">App-Sem7-PyFootball</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favoritos">Favorites</string>
    <string name="city">City:</string>
    <string name="founded">Founded:</string>
    <string name="surface">Surface:</string>
    <string name="address">Address:</string>
    <string name="capacity">Capacity:</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
</resources>